FIX works on firefox

--- a/client/src/components/Landing/Landing.css
+++ b/client/src/components/Landing/Landing.css
@@ -15,6 +15,18 @@
 
 
 
+@-webkit-keyframes splash {
+  from {
+    top: 0;
+    left: 0;
+  }
+  to {
+    top: -100vh;
+  }
+}
+
+
+
 @keyframes splash {
   from {
     top: 0;
@@ -30,8 +42,8 @@
   height: 250px;
   width: 250px;
   background: rgba(255, 255, 111, 0.1);
-  position: fixed;
-  z-index: 3;
+  position: absolute;
+  z-index: 10;
   border-radius: 50%;
 }
 
@@ -209,7 +221,7 @@
 }
 
 .circle-overlay {
-  opacity: 0.7;
+  opacity: 0.5;
   height: 30vw;
   width: 30vw;
   left: 32%;
@@ -226,13 +238,11 @@
 }
 
 .circle video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  position: absolute;
   width: 100vw;
-  z-index: 2;
+  top: -100px;
+  left: -100px;
+  z-index: 0;
 }
 
 .up-rec,
@@ -245,7 +255,6 @@
   background-attachment: fixed;
   opacity: 0.2;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
-  filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
   -webkit-transition: left ease 1s, right ease 1s;
   transition: left ease 1s, right ease 1s;
   background-repeat: no-repeat;
