--- a/client/src/styles/shared.css
+++ b/client/src/styles/shared.css
@@ -33,25 +33,39 @@ a {
 }
 
 .splash-screen {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: var(--color-2);
   height: 100vh;
   width: 100vw;
   margin: 0;
   position: fixed;
   z-index: 1500;
-  animation-fill-mode: forwards;
-  animation-duration: 1s;
-  animation-name: splash;
-  animation-delay: 3s;
-  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-name: splash;
+          animation-name: splash;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+          animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .splash-screen img {
   background: var(--color-4);
   padding:3% 100%; 
+  z-index: 1501;
+  position: absolute;
+
 }
 
 label {
@@ -87,7 +101,8 @@ label {
 
 .arrows img {
   width: 50px;
-  filter: saturate(0)
+  -webkit-filter: saturate(0);
+          filter: saturate(0)
 }
 
 .arrows img:hover {
@@ -107,14 +122,7 @@ label {
   font-size: 100px;
   color: white;
   text-align: center;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(var(--color-1)),
-    to(#221133)
-  );
-  background: -webkit-linear-gradient(var(--color-1), #221133);
+  background: -webkit-gradient(linear, left top, left bottom, from(var(--color-1)), to(#221133));
   background: linear-gradient(var(--color-1), #221133);
 }
 
@@ -183,13 +191,15 @@ input[type="range"].slider::-webkit-slider-runnable-track {
   width: 100%;
   height: 5.5px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #fff, 0px 0px 1px #fff;
+  -webkit-box-shadow: 1px 1px 1px #fff, 0px 0px 1px #fff;
+          box-shadow: 1px 1px 1px #fff, 0px 0px 1px #fff;
   background: rgba(248, 218, 180, 0);
   border-radius: 0px;
   border: 0px solid #fff;
 }
 input[type="range"].slider::-webkit-slider-thumb {
-  box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
+  -webkit-box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
+          box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
   border: 0px solid #ff1e00;
   height: 31px;
   width: 24px;
